--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "build:remix": "remix build",
     "dev": "run-p dev:*",
     "dev:css": "npm run generate:css -- --watch",
-    "dev:remix": "remix dev",
+    "dev:remix": "cross-env NODE_ENV=development netlify dev",
     "generate:css": "npx tailwindcss -i ./style/input.css -o ./app/tailwind.css",
-    "start": "remix-serve build"
+    "start": "cross-env NODE_ENV=production netlify dev"
   },
   "dependencies": {
+    "@netlify/functions": "^1.0.0",
+    "@remix-run/netlify": "^1.5.1",
     "@remix-run/node": "^1.5.1",
     "@remix-run/react": "^1.5.1",
-    "@remix-run/serve": "^1.5.1",
+    "cross-env": "^7.0.3",
     "diff": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
