--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "run-s build:*",
+    "build": "npm run build:css && npm run build:remix",
     "build:css": "npm run generate:css -- --minify",
     "build:remix": "remix build",
-    "dev": "run-p dev:*",
-    "dev:css": "npm run generate:css -- --watch",
+    "dev": "npm run dev:css && npm run dev:remix",
+    "dev:css": "npm run generate:css",
     "dev:remix": "cross-env NODE_ENV=development netlify dev",
     "generate:css": "npx tailwindcss -i ./style/input.css -o ./app/tailwind.css",
     "start": "cross-env NODE_ENV=production netlify dev"
@@ -29,7 +29,6 @@
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "eslint": "8.16.0",
-    "npm-run-all": "4.1.5",
     "tailwindcss": "3.0.24",
     "typescript": "4.7.2"
   },
